Trying to start normal application

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -15,9 +15,9 @@ resources.frontController.plugins.accessControl = "Application_Plugin_AccessCont
 
 resources.db.adapter = "PDO_MYSQL" 
 resources.db.isdefaulttableadapter = true 
-resources.db.params.dbname = "dashboard"
+resources.db.params.dbname = "u310912_starbuck"
 resources.db.params.username = "root"
-resources.db.params.password = ",j,th21"
+resources.db.params.password = "root"
 resources.db.params.host = "localhost" 
 resources.db.params.charset = "UTF8"
 
