--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,6 +12,7 @@ appnamespace = "StarbucksMugs"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 resources.frontController.plugins.accessControl = "Application_Plugin_AccessControl"
+resources.frontController.errorview = shiny
 
 resources.db.adapter = "PDO_MYSQL" 
 resources.db.isdefaulttableadapter = true 
